--- a/templates/page.html
+++ b/templates/page.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
    <head>
-      <title>$miTitle</title>
+      <title>My awesome site</title>
       <meta name="viewport" content="width=device-width, initial-scale=1.0">
    </head>
    <body>
